--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
     font-family: 'Nanum Gothic', sans-serif;
 }
 
+body {
+    min-width: 1050px;
+}
+
 .wrap {
     padding: 0 40px;
 }
@@ -75,6 +79,7 @@ header {
 
 .nav-a {
     display: inline-block;
+    position: relative;
     padding: 14px 36px;
     font-size: 14px;
     font-weight: bold;
@@ -84,7 +89,9 @@ header {
 }
 
 .nav-a img {
-    padding-left: 6px;
+    position: relative;
+    left: 6px;
+    top: 1px;
 }
 
 .bg-deepred {
@@ -257,26 +264,27 @@ aside {
 
 .plus-btn {
     background: url('../assignment5/img/plus-area-left.png') left center no-repeat;
-    padding-left: 21px;
+    padding: 7px 0 7px 21px;
 }
 
 .search-btn {
     background: url('../assignment5/img/search-area-left.png') left center no-repeat;
-    padding-left: 23px;
+    padding: 7px 0 7px 23px;
 }
 
 .delete-btn {
     background: url('../assignment5/img/delete-area-left.png') left center no-repeat;
-    padding-left: 23.6px;
+    padding: 7px 0 7px 24px;
 }
 
 .btn-right {
     background: url('../assignment5/img/area-right.png') right center no-repeat;
-    padding-right: 10px;
+    padding: 7px 10px 7px 0;
 }
 
 .btn-middle {
     background: url('../assignment5/img/area-middle.png') center center repeat-x;
+    padding: 7px 4px;
 }
 
 .sidebar-wrap>ul {
@@ -293,7 +301,6 @@ aside {
 
 .btn {
     display: inline-block;
-    padding: 7px;
     text-decoration: none;
     text-align: center;
     font-size: 12px;
@@ -311,8 +318,7 @@ aside {
     font-size: 12px;
 }
 
-.select-section span {
-    font-weight: bold;
+.select-section strong {
     color: #1779b1;
 }
 
@@ -384,12 +390,12 @@ td {
 
 .prev-btn-left {
     background: url('../assignment5/img/left-prev.png') left center no-repeat;
-    padding-left: 16px;
+    padding: 5px 0 5px 16px;
 }
 
 .prev-btn-right {
     background: url('../assignment5/img/right-prev.png') right center no-repeat;
-    padding-right: 6px;
+    padding: 5px 6px 5px 0;
 }
 
 .pn-btn-middle {
@@ -399,39 +405,41 @@ td {
 
 .next-btn-left {
     background: url('../assignment5/img/left-next.png') left center no-repeat;
-    padding-left: 6px;
+    padding: 5px 0 5px 6px;
 }
 
 .next-btn-right {
     background: url('../assignment5/img/right-next.png') right center no-repeat;
-    padding-right: 15px;
+    padding: 5px 16px 5px 0;
 }
 
 .num-left {
+    padding: 5px 0 5px 7px;
     background: url('../assignment5/img/num-left.png') left center no-repeat;
-    padding-left: 6px;
 }
 
 .num-right {
+    padding: 5px 7px 5px 0;
     background: url('../assignment5/img/num-right.png') right center no-repeat;
-    padding-right: 5px;
 }
 
 .num-middle {
+    padding: 5px 0;
     background: url('../assignment5/img/num-middle.png') center center repeat-x;
 }
 
 .clicked-num-left {
+    padding: 5px 0 5px 7px;
     background: url('../assignment5/img/clicked-num-btn-left.png') left center no-repeat;
-    padding-left: 6px;
 }
 
 .clicked-num-right {
+    padding: 5px 7px 5px 0;
     background: url('../assignment5/img/clicked-num-btn-right.png') right center no-repeat;
-    padding-right: 6px;
 }
 
 .clicked-num-middle {
+    padding: 5px 0;
     background: url('../assignment5/img/clicked-num-btn-middle.png') center center repeat-x;
 }
 
@@ -440,7 +448,6 @@ td {
     text-decoration: none;
     font-weight: bolder;
     color: #333333;
-    padding: 5px 3px;
 }
 
 .num-clicked {
@@ -448,7 +455,6 @@ td {
     text-decoration: none;
     font-weight: bolder;
     color: #ffffff;
-    padding: 5px 3px;
 }
 
 #Info {
