--- a/css/style.css
+++ b/css/style.css
@@ -55,17 +55,16 @@ header {
     position: absolute;
     top: 15px;
     right: 13px;
-    background: url('../img/nav-bar-color.png') left center no-repeat;
-    padding-left: 18px;
+    cursor: pointer;
 }
 
 .nav-bg-right {
-    background: url('../img/nav-right.png') right center no-repeat;
+    background: url('../img/nav-right.png') left center no-repeat;
     padding-right: 18px;
 }
 
 .nav-bg-middle {
-    background: url('../img/nav-middle.png') center center repeat-x;
+    background: url('../img/nav-middle.png') left center repeat-x;
 }
 
 .nav-bg-middle>ul>li {
@@ -73,16 +72,15 @@ header {
     list-style: none;
 }
 
-.nav-bg-middle ul li:last-child {
-    padding-right: 123px;
-}
-
 .nav-a {
     display: inline-block;
+    width: 138px;
+    white-space: nowrap;
     position: relative;
     padding: 14px 36px;
     font-size: 14px;
     font-weight: bold;
+    left: -6px;
     text-decoration: none;
     color: #ffffff;
     background: url('../img/divider.png') right center no-repeat;
@@ -96,7 +94,7 @@ header {
 
 .bg-deepred {
     background: url('../img/nav-bar-color.png') center center no-repeat;
-    padding-right: 47px;
+    padding-left: 45px;
 }
 
 .nav-b {
@@ -411,7 +409,7 @@ td {
 
 .next-btn-right {
     background: url('../img/right-next.png') right center no-repeat;
-    padding: 5px 16px 5px 0;
+    padding: 5px 15px 5px 0;
 }
 
 .num-left {
@@ -420,7 +418,7 @@ td {
 }
 
 .num-right {
-    padding: 5px 7px 5px 0;
+    padding: 5px 6px 5px 0;
     background: url('../img/num-right.png') right center no-repeat;
 }
 
@@ -435,12 +433,12 @@ td {
 }
 
 .clicked-num-right {
-    padding: 5px 7px 5px 0;
+    padding: 5px 6px 5px 0;
     background: url('../img/clicked-num-btn-right.png') right center no-repeat;
 }
 
 .clicked-num-middle {
-    padding: 5px 0;
+    padding: 5px 0.3px;
     background: url('../img/clicked-num-btn-middle.png') center center repeat-x;
 }
 
@@ -661,7 +659,7 @@ address {
 
 .btn-last-right {
     background: url('../img/last-btn-right.png') right center no-repeat;
-    padding: 5px 7px 5px 0;
+    padding: 5px 6px 5px 0;
 }
 
 .btn-last-middle {
