--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,8 @@
 }
 
 body {
-    min-width: 1050px;
+    min-width: 1024px;
+    background-color: #ebeadb;
 }
 
 .wrap {
@@ -14,7 +15,7 @@ body {
 }
 
 header {
-    min-width: 1000px;
+    min-width: 944px;
 }
 
 #header-wrap {
@@ -59,8 +60,8 @@ header {
 }
 
 .nav-bg-right {
-    background: url('../img/nav-right.png') left center no-repeat;
-    padding-right: 18px;
+    background: url('../img/nav-right.png') right center no-repeat;
+    padding-right: 12px;
 }
 
 .nav-bg-middle {
@@ -74,16 +75,19 @@ header {
 
 .nav-a {
     display: inline-block;
-    width: 138px;
+    width: 133px;
     white-space: nowrap;
     position: relative;
-    padding: 14px 36px;
+    padding: 14px 30px;
     font-size: 14px;
     font-weight: bold;
-    left: -6px;
     text-decoration: none;
     color: #ffffff;
     background: url('../img/divider.png') right center no-repeat;
+}
+
+.nav-c {
+    background: none;
 }
 
 .nav-a img {
@@ -95,10 +99,13 @@ header {
 .bg-deepred {
     background: url('../img/nav-bar-color.png') center center no-repeat;
     padding-left: 45px;
+    width: 127px;
 }
 
 .nav-b {
     visibility: hidden;
+    width: 108px;
+    cursor: unset;
 }
 
 .header-sub-block {
@@ -154,13 +161,13 @@ header {
 
 .header-sub-block-right {
     background: url('../img/header-sub-title-right.png') right center no-repeat;
-    padding-right: 30px;
+    padding-right: 20px;
 }
 
 .route ul {
     position: absolute;
     top: 19px;
-    right: 17px;
+    right: -3px;
 }
 
 .route ul li a {
@@ -169,11 +176,12 @@ header {
 }
 
 .aside-container {
-    padding: 25px 40px 0 40px;
+    padding: 25px 25px 0 22px;
     position: relative;
     margin-bottom: 19px;
     border: 1px solid #cfcebe;
     border-radius: 3px;
+    background-color: #ffffff;
 }
 
 .left-category {
@@ -235,29 +243,31 @@ header {
 }
 
 .contents-box {
-    padding-left: 214px;
+    padding-left: 192px;
 }
 
 .first-title {
-    padding-bottom: 17px;
-    margin-bottom: 20px;
+    padding-left: 6px;
+    padding-bottom: 15px;
+    margin-bottom: 10px;
     background: url('../img/green-bar.png') 0 bottom repeat-x;
 }
 
 #h3-SDI {
-    padding: 1px 35px;
+    padding: 7px 35px 0 35px;
     background: url('../img/icon1.png') left center no-repeat;
 }
 
 .btn-section {
     position: relative;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
 .plus-btn {
     background: url('../img/plus-area-left.png') left center no-repeat;
     padding: 7px 0 7px 21px;
     cursor: pointer;
+    margin-right: -5px;
 }
 
 .search-btn {
@@ -296,7 +306,7 @@ header {
 }
 
 .btn-display:not(:first-child) {
-    margin-left: 8px;
+    margin-left: 5px;
 }
 
 .btn {
@@ -313,8 +323,8 @@ header {
 
 .select-section {
     position: absolute;
-    bottom: 6px;
-    right: 0;
+    bottom: 7px;
+    right: 10px;
     font-size: 12px;
 }
 
@@ -350,17 +360,26 @@ tr:nth-child(even) {
 }
 
 thead th{
-    padding: 11px 0;
+    padding: 8.5px 0;
     border-bottom: 1px solid #999999;
     border-right: 1px solid #999999;
+    height: 32px;
+    color: #585953;
 }
 
-td {
-    padding: 11px 0;
+.td-size {
+    height: 32px;
+    padding: 11px 11px;
     border-top: 1px solid #d9d9d9;
     border-right: 1px solid #d9d9d9;
+    line-height: 10px;
+    vertical-align: middle;
+    color: #636161;
 }
 
+.td-text-align {
+    text-align: left;
+}
 
 .no-use-right-border {
     border-right: none;
@@ -376,6 +395,11 @@ td {
     padding-bottom: 19px;
     margin-bottom: 14px;
     background: url('../img/divide-section.png') center bottom repeat-x;
+}
+
+.paging2 {
+    text-align: center;
+    font-size: 11px;
 }
 
 .left-side {
@@ -459,22 +483,22 @@ td {
 
 #Info {
     font-size: 14px;
-    background: url('../img/light-icon.png') left center no-repeat;
-    padding: 6px 31px;
+    background: url('../img/light-icon.png') 6px center no-repeat;
+    padding: 6px 37px;
     margin-bottom: 10px;
 }
 
 .table2 {
-    margin-bottom: 13px;
+    margin-bottom: 9px;
 }
 
 .btn-section-right-align {
     text-align: right;
-    margin-bottom: 526px;
+    margin-bottom: 521px;
 }
 
 footer {
-    height: 83px;
+    height: 84px;
     position: relative;
     background-color: #cfcfbd;
 }
@@ -492,13 +516,13 @@ footer {
 .footer-img {
     position: absolute;
     top: 19px;
-    left: 120px;
+    left: 114gpx;
 }
 
 .footer-contents {
     padding: 25px 0 25px 33px;
     position: absolute;
-    right: 36px;
+    right: 62px;
     font-size: 12px;
     color: #9f9f89;
     background: url('../img/footer-dv.png') left center no-repeat;
@@ -519,6 +543,7 @@ address {
     word-spacing: 2px;
     vertical-align: middle;
     line-height: 13.5px;
+    color: #40403e;
 }
 
 .header {
@@ -554,6 +579,7 @@ address {
 #title-head {
     padding: 14px 0 17px 60px;
     font-size: 18px;
+    color: #583710;
     background: url('../img/head-icon.png') left center no-repeat;
     
 }
@@ -627,9 +653,11 @@ address {
 }
 
 #searching {
-    min-width: 360px;
-    padding: 7px 0;
+    min-width: 362px;
+    padding: 7px 20px;
     font-size: 12px;
+    position: absolute;
+    left: 216px;
 }
 
 .english a {
@@ -657,6 +685,10 @@ address {
     background: url('../img/last-btn-left.png') left center no-repeat;
 }
 
+.btn-last2 {
+    margin-bottom: 0;
+}
+
 .btn-last::first-letter {
     letter-spacing: 7px;
 }
@@ -673,4 +705,8 @@ address {
 
 .btn-last-middle label {
     cursor: pointer;
+}
+
+.letter-spacing-date {
+    letter-spacing: 8px;
 }
