--- a/css/layout.css
+++ b/css/layout.css
@@ -207,11 +207,14 @@ input[id="journalbtn"]:checked + div {
     display: none;
     list-style: none;
     position: absolute;
-    top: 44px;
-    left: 3px;
+    top: 38px;
+    left: 5px;
     min-width: 140px;
+    padding-top: 12px;
+    padding-bottom: 18px;
+    text-align: left;
     z-index: 1;
-    background-color: #ffffff;
+    background: url('../img/dropmenu/dropmenu-cb.png') 0 0 no-repeat;
 }
 
 .hover-popup-list>a {
@@ -227,15 +230,27 @@ input[id="journalbtn"]:checked + div {
     color: white;
 }
 
-.nav-list:focus .hover-popup {
+.nav-list:hover .hover-popup {
     display: block;
 }
 
 .nav-list:hover .nav-hover-a {
-    background: url('../img/header/ml-hover.png') center center no-repeat;
+    background: url('../img/dropmenu/hover-dropmenu.png') center center no-repeat;
 }
 
-.hover-popup:focus {
+.nav-hover-info {
+    display: none;
+}
+
+.nav-list:hover .nav-default-info {
+    display: none;
+}
+
+.nav-list:hover .nav-hover-info {
+    display: inline-block;
+}
+
+.hover-popup:hover {
     display: block;
 }
 
@@ -250,6 +265,7 @@ input[id="journalbtn"]:checked + div {
 .nav-list {
     display: inline-block;
     position: relative;
+    text-align: center;
 }
 
 .nav-hover-a:hover {
