--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,9 @@ header {
     width: 133px;
     white-space: nowrap;
     position: relative;
-    padding: 14px 30px;
+    padding: 14px 27px 14px 32px;
+    vertical-align: middle;
+    line-height: 14px;
     font-size: 14px;
     font-weight: bold;
     text-decoration: none;
@@ -93,8 +95,17 @@ header {
     background: url('../img/header/divider.png') right center no-repeat;
 }
 
-.nav-a:first-child {
-    padding-left: 14px 30px 14px 34px;
+
+.nav-pd-1 {
+    padding: 14px 41px 14px 45px;
+}
+
+.nav-pd-3 {
+    padding: 14px 30px 14px 32px;
+}
+
+.nav-pd-4 {
+    padding: 14px 19px 14px 21px;
 }
 
 .nav-c {
@@ -109,7 +120,7 @@ header {
 }
 
 .bg-deep {
-    background: url('../img/header/nav-hbg.png') center center no-repeat;
+    background: url('../img/header/divider.png') right center no-repeat;
     padding-left: 41px;
     height: 43px;
     width: 127px;
@@ -307,7 +318,7 @@ header {
 
 .btn-right {
     background: url('../img/area-right.png') right center no-repeat;
-    padding: 7px 10px 7px 0;
+    padding: 7px 5px 7px 0;
 }
 
 .btn-right-plus {
@@ -347,7 +358,7 @@ header {
 }
 
 .btn-word-spacing {
-    word-spacing: 18px;
+    word-spacing: 14px;
 }
 
 .select-section {
